<resources>
    <string name="app_name">MyMacros</string>
    <string name="action_settings">Settings</string>
    <string name="action_faq">FAQ</string>
    <string name="action_delete_food">Delete Food</string>
    <string name="action_scan_barcode">Scan Barcode</string>
    <string name="action_save_food">Save Food</string>
    <string name="action_delete_meal">Delete Meal</string>
    <string name="action_save_meal">Save Meal</string>
    <string name="open_drawer"> </string>
    <string name="close_drawer">MyMacros</string>
    <string name="toolbar_planner">Daily Planner</string>
    <string name="toolbar_planner_add_meal">Select Meal</string>
    <string name="toolbar_stats">Stats</string>
    <string name="toolbar_profile">Profile</string>
    <string name="toolbar_meals">My Meals</string>
    <string name="toolbar_meal_new">New Meal</string>
    <string name="toolbar_meal_edit">Edit Meal</string>
    <string name="toolbar_meal_add_food">Select Food</string>
    <string name="toolbar_foods">Foods</string>
    <string name="toolbar_food_new">New Food</string>
    <string name="toolbar_food_edit">Edit Food</string>
    <string name="toolbar_settings">Settings</string>
    <string name="toolbar_faq">MyMacros FAQ</string>
    <string name="drawer_header_goal">Current goal:</string>
    <string name="drawer_header_goal_default">Waiting for data&#8230;</string>
    <string name="drawer_header_progress">Today progress:</string>
    <string name="drawer_header_progress_default">Waiting for data&#8230;</string>
    <string-array name="drawer_labels">
        <item>Daily Planner</item>
        <item>Stats</item>
        <item>Profile</item>
        <item>My Meals</item>
        <item>Foods</item>
        <item>Settings</item>
        <item>Help &amp; Feedback</item>
    </string-array>
    <string name="pref_category_units">Units</string>
    <string name="pref_weight">Weight</string>
    <string name="pref_weight_default">kg</string>
    <string-array name="pref_weight_entries">
        <item>Kilograms (kg)</item>
        <item>Pounds (lb)</item>
    </string-array>
    <string-array name="pref_weight_entry_values">
        <item>kg</item>
        <item>lb</item>
    </string-array>
    <string name="pref_height">Height</string>
    <string name="pref_height_default">cm</string>
    <string-array name="pref_height_entries">
        <item>Centimeters (cm)</item>
        <item>Feet, Inches (ft, in)</item>
    </string-array>
    <string-array name="pref_height_entry_values">
        <item>cm</item>
        <item>ft, in</item>
    </string-array>
    <string name="pref_energy">Energy</string>
    <string name="pref_energy_default">kcal</string>
    <string-array name="pref_energy_entries">
        <item>Calories (kcal)</item>
        <item>joules (kJ)</item>
    </string-array>
    <string-array name="pref_energy_entry_values">
        <item>kcal</item>
        <item>kJ</item>
    </string-array>
    <string name="pref_liquid">Liquid</string>
    <string name="pref_liquid_default">ml</string>
    <string-array name="pref_liquid_entries">
        <item>Milliliters (ml)</item>
        <item>Ounces (oz)</item>
    </string-array>
    <string-array name="pref_liquid_entry_values">
        <item>ml</item>
        <item>oz</item>
    </string-array>
    <string name="pref_category_others">Other Settings</string>
    <string name="pref_weekday">Week starts on</string>
    <string name="pref_weekday_default">Monday</string>
    <string-array name="pref_weekday_entries">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="pref_category_online_storage">Online Storage</string>
    <string name="pref_gdrive">Google Drive</string>
    <string name="pref_gdrive_default">Tap to sign in</string>
    <string-array name="pref_gdrive_entries">
        <item>Coming soon.</item>
    </string-array>
    <string-array name="pref_gdrive_entry_default">
        <item>Tap to sign in</item>
    </string-array>
    <string name="profile_category_your_data">Your Data</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_gender_summary">Tap to set</string>
    <string-array name="profile_gender_entries">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="profile_gender_entry_values">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string name="profile_gender_default">ND</string>
    <string name="profile_age">Age</string>
    <string name="profile_age_summary">Tap to set</string>
    <string name="profile_weight">Weight</string>
    <string name="profile_weight_summary">Tap to set</string>
    <string name="profile_weight_default">0</string>
    <string name="profile_height">Height</string>
    <string name="profile_height_summary">Tap to set</string>
    <string name="profile_height_default">0</string>
    <string name="profile_height_eng_default">0-0</string>
    <string name="profile_bmr">Basal Metabolic Rate</string>
    <string name="profile_bmr_default">0</string>
    <string name="profile_category_energy_needs">Energy Needs</string>
    <string name="profile_activity_level">Activity Level</string>
    <string name="profile_activity_level_summary">Tap to set</string>
    <string-array name="profile_activity_level_entries">
        <item>Hyperactive\n(+2 hours daily)</item>
        <item>Intense (6&#8211;7 days/week)</item>
        <item>Normal (3&#8211;5 days/week)</item>
        <item>Low (1&#8211;2 days/week)</item>
        <item>Sedentary</item>
    </string-array>
    <string-array name="profile_activity_level_entry_values">
        <item>Hyperactive</item>
        <item>Intense</item>
        <item>Normal</item>
        <item>Low</item>
        <item>Sedentary</item>
    </string-array>
    <string name="profile_activity_level_default">ND</string>
    <string name="profile_goal">Goal</string>
    <string name="profile_goal_summary">Tap to set</string>
    <string-array name="profile_goal_entries">
        <item>Fat Loss</item>
        <item>Maintenance</item>
        <item>Bulking</item>
    </string-array>
    <string-array name="profile_goal_entry_values">
        <item>Fat Loss</item>
        <item>Maintenance</item>
        <item>Bulking</item>
    </string-array>
    <string name="profile_goal_default">ND</string>
    <string name="profile_daily_energy_need">Daily Energy Need</string>
    <string name="profile_daily_energy_need_default">0</string>
    <string name="profile_category_macronutrient_distribution">Macronutrient Distribution</string>
    <string name="profile_protein_rate">Protein</string>
    <string name="profile_protein_rate_default">25</string>
    <string name="profile_protein_rate_summary">20%</string>
    <string name="profile_carbohydrates_rate">Carbohydrates</string>
    <string name="profile_carbohydrates_rate_default">45</string>
    <string name="profile_carbohydrates_rate_summary">55%</string>
    <string name="profile_fat_rate">Fat</string>
    <string name="profile_fat_rate_default">30</string>
    <string name="profile_fat_rate_summary">25%</string>
    <string name="profile_recommended_dist">Recommended Distribution</string>
    <string name="profile_recommended_dist_summary">Tap to see</string>
    <string name="profile_recommended_dist_dialog">
        <b>Fat Loss</b>\n
        35\u0025 Protein, 40\u0025 Carbohydrates, 25\u0025 Fat.\n\n
        <b>Maintenance</b>\n
        30\u0025 Protein, 45\u0025 Carbohydrates, 25\u0025 Fat.\n\n
        <b>Bulking</b>\n
        20\u0025 Protein, 55\u0025 Carbohydrates, 25\u0025 Fat.
    </string>
    <string name="profile_category_macronutrient_grams">Grams Per Macronutrient</string>
    <string name="profile_protein_grams">Protein</string>
    <string name="profile_protein_grams_summary">132 g/day</string>
    <string name="profile_carbohydrates_grams">Carbohydrates</string>
    <string name="profile_carbohydrates_grams_summary">368 g/day</string>
    <string name="profile_fat_grams">Fat</string>
    <string name="profile_fat_grams_summary">74 g/day</string>
    <string name="profile_category_recommended_intakes">Recommended Intakes</string>
    <string name="profile_fiber">Fiber</string>
    <string name="profile_fiber_default">0</string>
    <string name="profile_fiber_summary">38 g/day</string>
    <string name="profile_water">Water</string>
    <string name="profile_water_default">0</string>
    <string name="profile_water_summary">2366 ml/day</string>
    <string name="foods_empty_page">Add a new food</string>
    <string name="food_name">Name</string>
    <string name="food_name_hint">Food name</string>
    <string name="food_portion">Portion</string>
    <string name="food_portion_hint">Portion quantity</string>
    <string-array name="spinner_units_array">
        <item>g</item>
        <item>oz</item>
        <item>ml</item>
        <item>lb</item>
        <item>unit</item>
    </string-array>
    <string name="food_macronutrients">Macronutrients</string>
    <string name="food_macronutrients_units">g</string>
    <string name="food_protein">Protein (g)</string>
    <string name="food_protein_hint">Protein</string>
    <string name="food_carbs">Carbohydrates (g)</string>
    <string name="food_carbs_hint">Carbohydrates</string>
    <string name="food_fat">Fat (g)</string>
    <string name="food_fat_hint">Fat</string>
    <string name="food_fiber">Fiber (g)</string>
    <string name="food_fiber_hint">Fiber</string>
    <string name="toast_food_edit">Please enter the missing data</string>
    <string name="dialog_food_delete_message">Delete food?</string>
    <string name="dialog_food_delete_ok">DELETE</string>
    <string name="dialog_food_delete_cancel">Cancel</string>
    <string name="meals_empty_page">Add a new meal</string>
    <string name="meal_name">Name</string>
    <string name="meal_name_hint">Meal name</string>
    <string name="meal_ingredients">Ingredients</string>
    <string name="meal_add_food">Add food</string>
    <string name="meal_nutrition_facts">Nutrition Facts</string>
    <string name="meal_protein">Protein</string>
    <string name="meal_carbs">Carbohydrates</string>
    <string name="meal_fat">Fat</string>
    <string name="meal_energy">Energy</string>
    <string name="meal_fiber">Fiber</string>
    <string name="meal_add_food_empty_page">
        No foods in the database  :(\n\n
        Please go to Foods and add some!
    </string>
    <string name="toast_meal_edit">Please enter the missing data</string>
    <string name="toast_meal_foods_missing">This meal doesn\u0027t contain any food</string>
    <string name="toast_meal_foods_no_macros">This meal doesn\u0027t have any macronutrients</string>
    <string name="error_meal_name_missing">Please enter a name</string>
    <string name="toast_meal_already_registered">There is a meal registered with that name</string>
    <string name="error_meal_name_registered">Please enter a different name</string>
    <string name="toast_meal_database_problem">There was an internal problem</string>
    <string name="toast_meal_not_created">Meal not created</string>
    <string name="toast_meal_created">Meal created</string>
    <string name="toast_meal_updated">Meal updated</string>
    <string name="toast_meal_deleted">Meal deleted</string>
    <string name="toast_meal_internal_problem">There was an internal problem</string>
    <string-array name="dialog_meal_choose_action">
        <item>Change quantity</item>
        <item>Remove</item>
    </string-array>
    <string name="dialog_meal_delete_message">Delete meal?</string>
    <string name="dialog_meal_delete_ok">DELETE</string>
    <string name="dialog_meal_delete_cancel">Cancel</string>
    <string name="dialog_meal_add_food_title">Define quantity</string>
</resources>