<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Your Data. -->
    <PreferenceCategory
        android:title="@string/profile_category_your_data"
        android:key="profile_your_data">
        <ListPreference
            android:key="profile_gender"
            android:title="@string/profile_gender"
            android:defaultValue="@string/profile_gender_default"
            android:summary="@string/profile_gender_summary"
            android:entries="@array/profile_gender_entries"
            android:entryValues="@array/profile_gender_entry_values" />
        <EditTextPreference
            android:key="profile_age"
            android:title="@string/profile_age"
            android:summary="@string/profile_age_summary"
            android:defaultValue="@integer/profile_age_default"
            android:inputType="number" />
        <EditTextPreference
            android:key="profile_height"
            android:title="@string/profile_height"
            android:summary="@string/profile_height_summary"
            android:defaultValue="@integer/profile_height_default"
            android:inputType="number" />
        <com.miguelpalacio.mymacros.TwoInputPreference
            android:key="profile_height_eng"
            android:title="@string/profile_height"
            android:summary="@string/profile_height_summary"
            android:defaultValue="@string/profile_height_eng_default" />
        <EditTextPreference
            android:key="profile_weight"
            android:title="@string/profile_weight"
            android:summary="@string/profile_weight_summary"
            android:defaultValue="@integer/profile_height_default"
            android:inputType="numberDecimal" />
        <Preference
            android:key="profile_bmr"
            android:title="@string/profile_bmr"
            android:defaultValue="@string/profile_bmr_default"
            android:editable="true" />
<!--        <com.miguelpalacio.mymacros.SingleLinePreference
            android:key="Test"
            android:title="Test"
            android:summary="Another test" />-->
    </PreferenceCategory>

    <!-- Daily Calorie Needs. -->
    <PreferenceCategory
        android:title="@string/profile_category_calorie_needs"
        android:key="profile_calorie_needs">
        <ListPreference
            android:key="profile_activity_level"
            android:title="@string/profile_activity_level"
            android:defaultValue="@string/profile_activity_level_default"
            android:summary="@string/profile_activity_level_summary"
            android:entries="@array/profile_activity_level_entries"
            android:entryValues="@array/profile_activity_level_entry_values" />
        <ListPreference
            android:key="profile_goal"
            android:title="@string/profile_goal"
            android:defaultValue="@string/profile_goal_default"
            android:summary="@string/profile_goal_summary"
            android:entries="@array/profile_goal_entries"
            android:entryValues="@array/profile_goal_entry_values" />
        <Preference
            android:key="profile_daily_calorie_need"
            android:title="@string/profile_daily_calorie_need"
            android:defaultValue="@string/profile_daily_calorie_need_default"
            android:editable="true" />
    </PreferenceCategory>

    <!-- Macronutrient Distribution. -->
    <PreferenceCategory
        android:title="@string/profile_category_macronutrient_distribution"
        android:key="profile_macronutrient_distribution">
        <com.miguelpalacio.mymacros.SingleLineTextPreference
            android:key="profile_protein_rate"
            android:title="@string/profile_protein_rate"
            android:summary="@string/profile_protein_rate_summary"
            android:defaultValue="@integer/profile_protein_dist_default"
            android:inputType="number" />
        <com.miguelpalacio.mymacros.SingleLineTextPreference
            android:key="profile_carbohydrates_rate"
            android:title="@string/profile_carbohydrates_rate"
            android:summary="@string/profile_carbohydrates_rate_summary"
            android:defaultValue="@integer/profile_carbohydrates_dist_default"
            android:inputType="number" />
        <com.miguelpalacio.mymacros.SingleLineTextPreference
            android:key="profile_fat_rate"
            android:title="@string/profile_fat_rate"
            android:summary="@string/profile_fat_rate_summary"
            android:defaultValue="@string/profile_fat_rate_default"
            android:inputType="number" />
<!--        <Preference
            android:key="profile_recommended_dist"
            android:title="@string/profile_recommended_dist"
            android:summary="@string/profile_recommended_dist_summary"
            android:selectable="true" />-->
        <com.miguelpalacio.mymacros.InfoDialogPreference
            android:key="profile_recommended_dist"
            android:title="@string/profile_recommended_dist"
            android:summary="@string/profile_recommended_dist_summary"
            android:selectable="true" />
    </PreferenceCategory>

    <!-- Grams Per Macronutrient. -->
    <PreferenceCategory
        android:title="@string/profile_category_macronutrient_grams"
        android:key="profile_macronutrient_grams">
        <com.miguelpalacio.mymacros.SingleLinePreference
            android:key="profile_protein_grams"
            android:title="@string/profile_protein_grams" />
        <com.miguelpalacio.mymacros.SingleLinePreference
            android:key="profile_carbohydrates_grams"
            android:title="@string/profile_carbohydrates_grams" />
        <com.miguelpalacio.mymacros.SingleLinePreference
            android:key="profile_fat_grams"
            android:title="@string/profile_fat_grams" />
    </PreferenceCategory>

    <!-- Recommended Intakes. -->
    <PreferenceCategory
        android:title="@string/profile_category_recommended_intakes"
        android:key="profile_recommended_intakes">
        <com.miguelpalacio.mymacros.SingleLinePreference
            android:key="profile_fiber"
            android:title="@string/profile_fiber"
            android:defaultValue="@string/profile_fiber_default" />
        <com.miguelpalacio.mymacros.SingleLinePreference
            android:key="profile_water"
            android:title="@string/profile_water"
            android:defaultValue="@string/profile_water_default" />
    </PreferenceCategory>
</PreferenceScreen>