<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_delete_food" android:title="@string/action_delete_food"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:visible="false"
        android:icon="@drawable/action_delete"/>
    <item android:id="@+id/action_scan_barcode" android:title="@string/action_scan_barcode"
        android:orderInCategory="100" app:showAsAction="ifRoom" android:visible="false"
        android:icon="@drawable/action_scan_barcode"/>
    <item android:id="@+id/action_save_food" android:title="@string/action_save_food"
        android:orderInCategory="100" app:showAsAction="ifRoom"
        android:icon="@drawable/action_save"/>
</menu>