<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.miguelpalacio.mymacros.views.MealEditorFragment">

    <!-- Meal Name. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical" >

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_name"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/accent"/>

        <EditText android:id="@+id/meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16dp"
            android:textSize="16sp"
            android:layout_marginLeft="13dp"
            android:layout_marginStart="13dp"
            android:layout_marginRight="39dp"
            android:layout_marginEnd="39dp"
            android:inputType="text"
            android:maxLength="50"
            android:hint="@string/meal_name_hint"
            android:fontFamily="sans-serif" />
    </LinearLayout>

    <!-- Nutrition Facts (set gone by default). -->
    <LinearLayout
        android:id="@+id/meal_nutrition_facts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_nutrition_facts"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/accent"/>

        <!-- Contents. -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:baselineAligned="false"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">

            <!-- Protein. -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_protein"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/meal_protein"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="33 g"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

            <!-- Carbs. -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_carbs"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/meal_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="33 g"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

            <!-- Fat. -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_fat"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/meal_fat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="33 g"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

            <!-- Fiber. -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_fiber"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/meal_fiber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="33 g"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

        </LinearLayout>

<!--        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:baselineAligned="false"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:orientation="horizontal">


            &lt;!&ndash; Energy. &ndash;&gt;
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/meal_energy"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:paddingBottom="8dp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/primary_text"/>

                <TextView
                    android:id="@+id/meal_energy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="33 g"
                    android:textSize="14sp"
                    android:gravity="center"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/secondary_text" />
            </LinearLayout>

        </LinearLayout>-->

        <!-- Energy Distribution. -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="horizontal">

            <!-- Pie Chart. -->
            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/meal_pie_chart"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>



    <!-- Foods (label only). -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:orientation="vertical">

        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meal_ingredients"
            android:paddingTop="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:textSize="14sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/accent"/>
    </LinearLayout>
</LinearLayout>
